[package]
name = "private_ip_detector"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
ipnet = "2.5.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
